--- a/src/app/scout/tele/tele.component.html
+++ b/src/app/scout/tele/tele.component.html
@@ -130,9 +130,9 @@
                                     </ion-label>
                                     <ion-select formControlName="tele_idPanelRotationTime">
                                         <ion-select-option value="1">NA</ion-select-option>
-                                        <ion-select-option value="2">> 7 sec</ion-select-option>
-                                        <ion-select-option value="3">3-7 sec</ion-select-option>
-                                        <ion-select-option value="4">< 3 sec</ion-select-option>
+                                        <ion-select-option value="2">> 7 sec (slow)</ion-select-option>
+                                        <ion-select-option value="3">3-7 sec (medium)</ion-select-option>
+                                        <ion-select-option value="4">< 3 sec (fast)</ion-select-option>
                                     </ion-select>
                                 </ion-item>
                             </ion-list>
@@ -151,9 +151,9 @@
                                     </ion-label>
                                     <ion-select formControlName="tele_idPanelPositionTime">
                                         <ion-select-option value="1">NA</ion-select-option>
-                                        <ion-select-option value="2">> 7 sec</ion-select-option>
-                                        <ion-select-option value="3">3-7 sec</ion-select-option>
-                                        <ion-select-option value="4">< 3 sec</ion-select-option>
+                                        <ion-select-option value="2">> 7 sec (slow)</ion-select-option>
+                                        <ion-select-option value="3">3-7 sec (medium)</ion-select-option>
+                                        <ion-select-option value="4">< 3 sec (fast)</ion-select-option>
                                     </ion-select>
                                 </ion-item>
                             </ion-list>
@@ -263,9 +263,9 @@
                     </ion-label>
                     <ion-select formControlName="tele_idClimbGrabTime">
                         <ion-select-option value="1">NA</ion-select-option>
-                        <ion-select-option value="2">> 7 sec</ion-select-option>
-                        <ion-select-option value="3">3-7 sec</ion-select-option>
-                        <ion-select-option value="4">< 3 sec</ion-select-option>
+                        <ion-select-option value="2">> 7 sec (slow)</ion-select-option>
+                        <ion-select-option value="3">3-7 sec (medium)</ion-select-option>
+                        <ion-select-option value="4">< 3 sec (fast)</ion-select-option>
                     </ion-select>
                 </ion-item>
                 <ion-item>
@@ -274,9 +274,9 @@
                     </ion-label>
                     <ion-select formControlName="tele_idClimbTime">
                         <ion-select-option value="1">NA</ion-select-option>
-                        <ion-select-option value="2">> 7 sec</ion-select-option>
-                        <ion-select-option value="3">3-7 sec</ion-select-option>
-                        <ion-select-option value="4">< 3 sec</ion-select-option>
+                        <ion-select-option value="2">> 7 sec (slow)</ion-select-option>
+                        <ion-select-option value="3">3-7 sec (medium)</ion-select-option>
+                        <ion-select-option value="4">< 3 sec (fast)</ion-select-option>
                     </ion-select>
                 </ion-item>
                 <ion-item>
