--- a/src/assets/sass/_ns-card.scss
+++ b/src/assets/sass/_ns-card.scss
@@ -26,6 +26,16 @@
   margin-bottom: 30px;
 }
 
+.ns-card-form-danger {
+  @extend .ns-card-form;
+  background-color: #f04141;
+}
+
+.ns-card-form-success {
+  @extend .ns-card-form;
+  background-color: #10dc60;
+}
+
 .ns-card-note {
   color: $info;
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
